--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,29 +10,32 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
+
 <body>
-    <div class="container ">
+    <div class="container poki ">
         <img class=" d-flex mx-auto" src="img/pokemon_logo 1.png" alt="pocemons logo">
-        <form class="js__forms d-flex justify-content-between " action="">
-            <select class="types-select form-select ">
-                
-            </select>
-            <input class="js__search form-control " type="text" value="Search">
+
+        <form class="js__forms d-flex justify-content-between mx-auto" action="">
+            <select class="types-select form-select "> </select>
+
+            <input class="js__search  form-control " type="text" placeholder="Search"><i class=" bii bi bi-search "></i>
+
             <select class="az-select  form-select ">
                 <option>Aa-Zz</option>
                 <option>Zz-Aa</option>
             </select>
+
             <button class="submit btn  " type="submit">Button</button>
 
         </form>
 
-        <ul class="films-wrapper">
+        <ul class="pokemons-wrapper"> </ul>
+</div>
 
-        </ul>
-    </div>
-    
     <script src="pokemons.js"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
