--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 </head>
 
 <body>
-    <div class="container poki ">
-        <img class=" d-flex mx-auto" src="img/pokemon_logo 1.png" alt="pocemons logo">
-
+    <div class="container poki py-5 ">
+        <div class="logos  d-flex mx-auto ">
+            <img class="logo" src="img/pokemon_logo 1.png" alt="pocemons logo">
+            <img class="heart m-0" src="img/Base.png" alt="heart" width="30" height="30">
+        </div>
         <form class="js__forms d-flex justify-content-between mx-auto" action="">
             <select class="types-select form-select "> </select>
 
@@ -32,7 +34,7 @@
         </form>
 
         <ul class="pokemons-wrapper"> </ul>
-</div>
+    </div>
 
     <script src="pokemons.js"></script>
     <script src="index.js"></script>
